// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeInput renders correctly for all CodeInputStatus states 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "padding": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          test
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 2`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      {
        "elevation": 5,
        "shadowColor": "rgba(48, 46, 37, 0.15)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
      [
        {
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 16,
            "paddingBottom": 4,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          label
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="visible-password"
            onBlur={[Function]}
            onChangeText={[MockFunction]}
            onFocus={[Function]}
            placeholder="placeholder"
            style={
              [
                {
                  "color": "#2E3338",
                  "flex": 1,
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingHorizontal": 0,
                  "paddingVertical": 12,
                },
                undefined,
                {
                  "minHeight": undefined,
                },
              ]
            }
            value="test"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 3`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "padding": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <ActivityIndicator
          color="#1AB775"
          size="small"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 4`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "padding": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <ActivityIndicator
          color="#1AB775"
          size="small"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 5`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "padding": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <svg
          fill="none"
          height={32}
          style={{}}
          viewBox="0 0 24 24"
          width={32}
        >
          <path
            d="M20.5 7.33 9.186 18.643 4 13.458l1.33-1.33 3.856 3.847L19.17 6 20.5 7.33Z"
            fill="#42D689"
            style={{}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states 6`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      {
        "elevation": 5,
        "shadowColor": "rgba(48, 46, 37, 0.15)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
      [
        {
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 16,
            "paddingBottom": 4,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          label
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="visible-password"
            onBlur={[Function]}
            onChangeText={[MockFunction]}
            onFocus={[Function]}
            placeholder="placeholder"
            style={
              [
                {
                  "color": "#2E3338",
                  "flex": 1,
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingHorizontal": 0,
                  "paddingVertical": 12,
                },
                undefined,
                {
                  "minHeight": undefined,
                },
              ]
            }
            value="test"
          />
        </View>
      </View>
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <svg
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="#EA6042"
            strokeWidth="1.25"
          />
          <path
            d="M8 12V7M8 6V5"
            stroke="#EA6042"
            strokeWidth="1.25"
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states with short codes 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "padding": 16,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
              "textAlign": "center",
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 18,
              "lineHeight": 24,
              "paddingVertical": 12,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states with short codes 2`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      {
        "elevation": 5,
        "shadowColor": "rgba(48, 46, 37, 0.15)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
      [
        {
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 16,
          },
          {
            "paddingBottom": 4,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "textAlign": "center",
            }
          }
        >
          label
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="number-pad"
            onBlur={[Function]}
            onChangeText={[MockFunction]}
            onFocus={[Function]}
            placeholder="placeholder"
            style={
              [
                {
                  "color": "#2E3338",
                  "flex": 1,
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingHorizontal": 0,
                  "paddingVertical": 12,
                },
                undefined,
                {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 18,
                  "lineHeight": 24,
                  "minHeight": undefined,
                  "textAlign": "center",
                },
              ]
            }
            textContentType="oneTimeCode"
            value="test"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states with short codes 3`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "padding": 16,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
              "textAlign": "center",
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 18,
              "lineHeight": 24,
              "paddingVertical": 12,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <ActivityIndicator
          color="#1AB775"
          size="small"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states with short codes 4`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "padding": 16,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
              "textAlign": "center",
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 18,
              "lineHeight": 24,
              "paddingVertical": 12,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <ActivityIndicator
          color="#1AB775"
          size="small"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states with short codes 5`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "backgroundColor": "rgba(103, 99, 86, 0.1)",
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "padding": 16,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
              "opacity": 0.5,
              "textAlign": "center",
            }
          }
        >
          label
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#A49B80",
              "fontFamily": "Inter-Regular",
              "fontSize": 18,
              "lineHeight": 24,
              "paddingVertical": 12,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
      </View>
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <svg
          fill="none"
          height={32}
          style={{}}
          viewBox="0 0 24 24"
          width={32}
        >
          <path
            d="M20.5 7.33 9.186 18.643 4 13.458l1.33-1.33 3.856 3.847L19.17 6 20.5 7.33Z"
            fill="#42D689"
            style={{}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`CodeInput renders correctly for all CodeInputStatus states with short codes 6`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      {
        "elevation": 5,
        "shadowColor": "rgba(48, 46, 37, 0.15)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      },
      [
        {
          "padding": 0,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 8,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "padding": 16,
          },
          {
            "paddingBottom": 4,
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "textAlign": "center",
            }
          }
        >
          label
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <TextInput
            autoCapitalize="none"
            autoCorrect={false}
            keyboardType="number-pad"
            onBlur={[Function]}
            onChangeText={[MockFunction]}
            onFocus={[Function]}
            placeholder="placeholder"
            style={
              [
                {
                  "color": "#2E3338",
                  "flex": 1,
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "paddingHorizontal": 0,
                  "paddingVertical": 12,
                },
                undefined,
                {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 18,
                  "lineHeight": 24,
                  "minHeight": undefined,
                  "textAlign": "center",
                },
              ]
            }
            textContentType="oneTimeCode"
            value="test"
          />
        </View>
      </View>
      <View
        style={
          {
            "marginLeft": 4,
            "width": 32,
          }
        }
      >
        <svg
          fill="none"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="#EA6042"
            strokeWidth="1.25"
          />
          <path
            d="M8 12V7M8 6V5"
            stroke="#EA6042"
            strokeWidth="1.25"
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;
